--- a/.github/workflows/release_automation.yml
+++ b/.github/workflows/release_automation.yml
@@ -18,6 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    env:
+      CENTRAL_MANIFEST_REPO: jellyfin/jellyfin-plugin-manifest
 
     steps:
       - name: Checkout code
@@ -105,40 +107,40 @@ jobs:
           prerelease: false
           generate_release_notes: true
 
+
       # Update Message in Remote Repository
       - name: Checkout Central Manifest Repo
+        id: checkout_central_manifest
+        continue-on-error: true
         uses: actions/checkout@v6
         with:
-          repository: ${{ github.repository_owner }}/jellyfin-plugin-manifest
+          repository: ${{ env.CENTRAL_MANIFEST_REPO }}
           path: central-manifest
           token: ${{ secrets.JELLYFIN_PLUGIN_MANIFEST_UPDATER_PAT }}
 
       - name: Update Central Manifest
+        if: ${{ steps.checkout_central_manifest.outcome == 'success' }}
         shell: bash
         run: |
             cd central-manifest
-            
+
             REPO_OWNER="${{ github.repository_owner }}"
             REPO_NAME="${{ github.event.repository.name }}"
-            
+
             # 1. Get info from previous steps
             VERSION="${{ env.VERSION }}"
             HASH="${{ env.ZIP_HASH }}"
             TIME="${{ env.BUILD_TIME }}"
             DOWNLOAD_URL="https://github.com/$REPO_OWNER/$REPO_NAME/releases/download/v$VERSION/Jellyfin.Plugin.Seasonals.zip"
-            
+
             # 2. Get info from env
             PLUGIN_GUID="${{ env.PLUGIN_GUID }}"
             CHANGELOG="${{ env.CHANGELOG }}"
             TARGET_ABI="${{ env.TARGET_ABI }}"
-            
+
             echo "Updating Central Manifest for Plugin GUID: $PLUGIN_GUID"
-            
+
             # 3. Update/Prepend entry in central manifest.json
-            # Logic:
-            # - If array is empty or new version != old version: PREPEND new entry
-            # - If new version == old version: OVERWRITE (update) existing entry (re-release)
-            
             jq --arg guid "$PLUGIN_GUID" \
                --arg hash "$HASH" \
                --arg time "$TIME" \
@@ -146,9 +148,8 @@ jobs:
                --arg ver "$VERSION" \
                --arg changelog "$CHANGELOG" \
                --arg abi "$TARGET_ABI" \
-               'map(if .guid == $guid then 
+               'map(if .guid == $guid then
                   if .versions[0].version != $ver then
-                      # New Version -> Prepend
                       .versions = [{
                         "version": $ver,
                         "changelog": $changelog,
@@ -158,7 +159,6 @@ jobs:
                         "timestamp": $time
                       }] + .versions
                   else
-                      # Same Version -> Update existing (overwrite top)
                       .versions[0].changelog = $changelog |
                       .versions[0].targetAbi = $abi |
                       .versions[0].sourceUrl = $url |
@@ -167,14 +167,14 @@ jobs:
                   end
                 else . end)' \
                manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
-               
+
       - name: Commit and Push Central Manifest
+        if: ${{ steps.checkout_central_manifest.outcome == 'success' }}
         run: |
           cd central-manifest
           git config user.name "CodeDevMLH"
           git config user.email "145071728+CodeDevMLH@users.noreply.github.com"
-          
-          # Check if there are changes
+
           if [[ -n $(git status -s) ]]; then
             git add manifest.json
             git commit -m "Auto-Update Seasonals to v${{ env.VERSION }}"
@@ -182,3 +182,7 @@ jobs:
           else
             echo "No changes to central manifest."
           fi
+
+      - name: Skip Central Manifest Update
+        if: ${{ steps.checkout_central_manifest.outcome != 'success' }}
+        run: echo "Skipping central manifest update (PAT missing/invalid or manifest repo unavailable)."
