--- a/.github/workflows/release_automation.yml
+++ b/.github/workflows/release_automation.yml
@@ -110,29 +110,25 @@ jobs:
       - name: Update manifest.json (prepend new version)
         shell: bash
         run: |
-          set -euo pipefail
-
           REPO_OWNER="${{ github.repository_owner }}"
           REPO_NAME="${{ github.event.repository.name }}"
           VERSION="${{ env.VERSION }}"
-          DOWNLOAD_URL="https://github.com/${REPO_OWNER}/${REPO_NAME}/releases/download/v${VERSION}/Jellyfin.Plugin.Seasonals.zip"
-
+          DOWNLOAD_URL="https://github.com/$REPO_OWNER/$REPO_NAME/releases/download/v$VERSION/Jellyfin.Plugin.Seasonals.zip"
           jq --arg ver "$VERSION" \
              --arg changelog "${{ env.CHANGELOG }}" \
              --arg abi "${{ env.TARGET_ABI }}" \
              --arg url "$DOWNLOAD_URL" \
              --arg hash "${{ env.ZIP_HASH }}" \
              --arg time "${{ env.BUILD_TIME }}" \
-             '
-             .[0].versions = ([{
+             '.[0].versions = ([{
                 "version": $ver,
                 "changelog": $changelog,
                 "targetAbi": $abi,
                 "sourceUrl": $url,
                 "checksum": $hash,
                 "timestamp": $time
-             }] + .[0].versions)
-             ' manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
+            }] + .[0].versions)' \
+            manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
 
       - name: Commit manifest.json
         uses: stefanzweifel/git-auto-commit-action@v5
