--- a/.github/workflows/release_automation.yml
+++ b/.github/workflows/release_automation.yml
@@ -2,8 +2,7 @@ name: Auto Release Plugin
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
     paths-ignore:
       - '.github/**'
       - 'README.md'
@@ -12,6 +11,8 @@ on:
       - '.editorconfig'
       - 'LICENSE'
       - 'logo.png'
+      - 'manifest.json'   # IMPORTANT: prevent infinite loop when we commit manifest updates
+  workflow_dispatch: {}
 
 jobs:
   build-and-release:
@@ -20,195 +21,135 @@ jobs:
       contents: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
+      - name: Checkout code (full history + tags)
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+      - name: Sync workspace to origin/main
+        shell: bash
+        run: |
+          set -euo pipefail
+          git fetch origin main --prune
+          git checkout main
+          git reset --hard origin/main
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v5
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.x'
 
-      - name: Read Version from Manifest
-        id: read_version
+      - name: Compute next version (1.8.0.X)
+        id: ver
+        shell: bash
         run: |
-          VERSION=$(jq -r '.[0].versions[0].version' manifest.json)
-          CHANGELOG=$(jq -r '.[0].versions[0].changelog' manifest.json)
-          TARGET_ABI=$(jq -r '.[0].versions[0].targetAbi' manifest.json)
-          
-          echo "Detected Version: $VERSION"
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "TARGET_ABI=$TARGET_ABI" >> $GITHUB_ENV
-          
-          # Also export GUID for later use
-          PLUGIN_GUID=$(jq -r '.[0].guid' manifest.json)
-          echo "PLUGIN_GUID=$PLUGIN_GUID" >> $GITHUB_ENV
-          
-          # Escape newlines in changelog for GITHUB_ENV
-          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
-          echo "$CHANGELOG" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          set -euo pipefail
 
-      - name: Check if Release Already Exists
-        id: check_release
+          CURRENT=$(jq -r '.[0].versions[0].version' manifest.json)
+          # BASE = first 3 parts: 1.8.0 from 1.8.0.0
+          BASE=$(echo "$CURRENT" | awk -F. '{print $1"."$2"."$3}')
+          BASE_TAG="v${BASE}.0"
+
+          git fetch --tags --force
+
+          if git rev-parse -q --verify "refs/tags/${BASE_TAG}" >/dev/null; then
+            REV=$(git rev-list --count "${BASE_TAG}..HEAD")
+          else
+            REV=1
+          fi
+
+          # If you're exactly on the tag commit, REV becomes 0; force at least 1
+          if [ "${REV}" -lt 1 ]; then REV=1; fi
+
+          VERSION="${BASE}.${REV}"
+
+          echo "CURRENT=$CURRENT"
+          echo "BASE=$BASE"
+          echo "BASE_TAG=$BASE_TAG"
+          echo "REV=$REV"
+          echo "VERSION=$VERSION"
+
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "BASE=$BASE" >> $GITHUB_ENV
+          echo "REV=$REV" >> $GITHUB_ENV
+
+          TARGET_ABI=$(jq -r '.[0].versions[0].targetAbi' manifest.json)
+          PLUGIN_GUID=$(jq -r '.[0].guid' manifest.json)
+          echo "TARGET_ABI=$TARGET_ABI" >> $GITHUB_ENV
+          echo "PLUGIN_GUID=$PLUGIN_GUID" >> $GITHUB_ENV
+
+          CHANGELOG=$(git log -1 --pretty=format:"%s (%h)")
+          echo "CHANGELOG=$CHANGELOG" >> $GITHUB_ENV
+
+      - name: Stop if tag already exists
+        shell: bash
+        run: |
+          set -euo pipefail
+          TAG="v${{ env.VERSION }}"
+          if git rev-parse -q --verify "refs/tags/${TAG}" >/dev/null; then
+            echo "Tag ${TAG} already exists. Nothing to do."
+            exit 0
+          fi
+
+      - name: Build and Zip
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          dotnet build Jellyfin.Plugin.Seasonals/Jellyfin.Plugin.Seasonals.csproj \
+            --configuration Release \
+            --output bin/Publish \
+            /p:Version=${{ env.VERSION }} \
+            /p:AssemblyVersion=${{ env.VERSION }} \
+            /p:FileVersion=${{ env.VERSION }} \
+            /p:InformationalVersion=${{ env.VERSION }}
+
+          cd bin/Publish
+          zip -r Jellyfin.Plugin.Seasonals.zip .
+          cd ../..
+
+          HASH=$(md5sum bin/Publish/Jellyfin.Plugin.Seasonals.zip | awk '{ print $1 }')
+          TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+
+          echo "ZIP_HASH=$HASH" >> $GITHUB_ENV
+          echo "BUILD_TIME=$TIME" >> $GITHUB_ENV
+          echo "ZIP_PATH=bin/Publish/Jellyfin.Plugin.Seasonals.zip" >> $GITHUB_ENV
+
+      - name: Update manifest.json (prepend new version)
         shell: bash
         run: |
           REPO_OWNER="${{ github.repository_owner }}"
           REPO_NAME="${{ github.event.repository.name }}"
           VERSION="${{ env.VERSION }}"
-          TAG="v$VERSION"
-          API_URL="https://api.github.com/repos/$REPO_OWNER/$REPO_NAME/releases/tags/$TAG"
-
-          HTTP_STATUS=$(curl -s -o /dev/null -w "%{http_code}" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "$API_URL")
-
-          if [ "$HTTP_STATUS" -eq 200 ]; then
-            echo "Release $TAG already exists. Skipping release-related steps."
-            echo "release_exists=true" >> $GITHUB_OUTPUT
-          elif [ "$HTTP_STATUS" -eq 404 ]; then
-            echo "No existing release for $TAG. Continuing." 
-            echo "release_exists=false" >> $GITHUB_OUTPUT
-          else
-            echo "Unexpected response when checking release: $HTTP_STATUS"
-            exit 1
-          fi
-
-      - name: Build and Zip
-        if: steps.check_release.outputs.release_exists == 'false'
-        shell: bash
-        run: |
-          # Inject version from manifest into the build
-          dotnet build Jellyfin.Plugin.Seasonals/Jellyfin.Plugin.Seasonals.csproj --configuration Release --output bin/Publish /p:Version=${{ env.VERSION }} /p:AssemblyVersion=${{ env.VERSION }}
-          
-          cd bin/Publish
-          zip -r Jellyfin.Plugin.Seasonals.zip *
-          cd ../..
-          
-          # Calculate hash
-          HASH=$(md5sum bin/Publish/Jellyfin.Plugin.Seasonals.zip | awk '{ print $1 }')
-          TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-          
-          # Export variables for next steps
-          echo "ZIP_HASH=$HASH" >> $GITHUB_ENV
-          echo "BUILD_TIME=$TIME" >> $GITHUB_ENV
-          echo "ZIP_PATH=bin/Publish/Jellyfin.Plugin.Seasonals.zip" >> $GITHUB_ENV
-
-      - name: Update manifest.json
-        if: steps.check_release.outputs.release_exists == 'false'
-        shell: bash
-        run: |
-            REPO_OWNER="${{ github.repository_owner }}"
-            REPO_NAME="${{ github.event.repository.name }}"
-            VERSION="${{ env.VERSION }}"
-            DOWNLOAD_URL="https://github.com/$REPO_OWNER/$REPO_NAME/releases/download/v$VERSION/Jellyfin.Plugin.Seasonals.zip"
-            
-            echo "Updating manifest.json with:"
-            echo "Hash: ${{ env.ZIP_HASH }}"
-            echo "Time: ${{ env.BUILD_TIME }}"
-            echo "Url:  $DOWNLOAD_URL"
-            
-            jq --arg hash "${{ env.ZIP_HASH }}" \
-             --arg time "${{ env.BUILD_TIME }}" \
+          DOWNLOAD_URL="https://github.com/$REPO_OWNER/$REPO_NAME/releases/download/v$VERSION/Jellyfin.Plugin.Seasonals.zip"
+          jq --arg ver "$VERSION" \
+             --arg changelog "${{ env.CHANGELOG }}" \
+             --arg abi "${{ env.TARGET_ABI }}" \
              --arg url "$DOWNLOAD_URL" \
-             '.[0].versions[0].checksum = $hash | .[0].versions[0].timestamp = $time | .[0].versions[0].sourceUrl = $url' \
-             manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
+             --arg hash "${{ env.ZIP_HASH }}" \
+             --arg time "${{ env.BUILD_TIME }}" \
+             '.[0].versions = ([{
+                "version": $ver,
+                "changelog": $changelog,
+                "targetAbi": $abi,
+                "sourceUrl": $url,
+                "checksum": $hash,
+                "timestamp": $time
+            }] + .[0].versions)' \
+            manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
 
       - name: Commit manifest.json
-        if: steps.check_release.outputs.release_exists == 'false'
-        uses: stefanzweifel/git-auto-commit-action@v7
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Update manifest.json for release v${{ env.VERSION }} [skip ci]"
+          commit_message: "Update manifest.json for v${{ env.VERSION }}"
           file_pattern: manifest.json
 
       - name: Create Release
-        if: steps.check_release.outputs.release_exists == 'false'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: "v${{ env.VERSION }}"
           name: "v${{ env.VERSION }}"
-          # body: ${{ env.CHANGELOG }}
+          body: "${{ env.CHANGELOG }}"
           files: ${{ env.ZIP_PATH }}
           draft: false
           prerelease: false
-          generate_release_notes: true
-
-      # Update Message in Remote Repository
-      - name: Checkout Central Manifest Repo
-        if: steps.check_release.outputs.release_exists == 'false'
-        uses: actions/checkout@v6
-        with:
-          repository: ${{ github.repository_owner }}/jellyfin-plugin-manifest
-          path: central-manifest
-          token: ${{ secrets.JELLYFIN_PLUGIN_MANIFEST_UPDATER_PAT }}
-
-      - name: Update Central Manifest
-        if: steps.check_release.outputs.release_exists == 'false'
-        shell: bash
-        run: |
-            cd central-manifest
-            
-            REPO_OWNER="${{ github.repository_owner }}"
-            REPO_NAME="${{ github.event.repository.name }}"
-            
-            # 1. Get info from previous steps
-            VERSION="${{ env.VERSION }}"
-            HASH="${{ env.ZIP_HASH }}"
-            TIME="${{ env.BUILD_TIME }}"
-            DOWNLOAD_URL="https://github.com/$REPO_OWNER/$REPO_NAME/releases/download/v$VERSION/Jellyfin.Plugin.Seasonals.zip"
-            
-            # 2. Get info from env
-            PLUGIN_GUID="${{ env.PLUGIN_GUID }}"
-            CHANGELOG="${{ env.CHANGELOG }}"
-            TARGET_ABI="${{ env.TARGET_ABI }}"
-            
-            echo "Updating Central Manifest for Plugin GUID: $PLUGIN_GUID"
-            
-            # 3. Update/Prepend entry in central manifest.json
-            # Logic:
-            # - If array is empty or new version != old version: PREPEND new entry
-            # - If new version == old version: OVERWRITE (update) existing entry (re-release)
-            
-            jq --arg guid "$PLUGIN_GUID" \
-               --arg hash "$HASH" \
-               --arg time "$TIME" \
-               --arg url "$DOWNLOAD_URL" \
-               --arg ver "$VERSION" \
-               --arg changelog "$CHANGELOG" \
-               --arg abi "$TARGET_ABI" \
-               'map(if .guid == $guid then 
-                  if .versions[0].version != $ver then
-                      # New Version -> Prepend
-                      .versions = [{
-                        "version": $ver,
-                        "changelog": $changelog,
-                        "targetAbi": $abi,
-                        "sourceUrl": $url,
-                        "checksum": $hash,
-                        "timestamp": $time
-                      }] + .versions
-                  else
-                      # Same Version -> Update existing (overwrite top)
-                      .versions[0].changelog = $changelog |
-                      .versions[0].targetAbi = $abi |
-                      .versions[0].sourceUrl = $url |
-                      .versions[0].checksum = $hash |
-                      .versions[0].timestamp = $time
-                  end
-                else . end)' \
-               manifest.json > manifest.json.tmp && mv manifest.json.tmp manifest.json
-               
-      - name: Commit and Push Central Manifest
-        if: steps.check_release.outputs.release_exists == 'false'
-        run: |
-          cd central-manifest
-          git config user.name "CodeDevMLH"
-          git config user.email "145071728+CodeDevMLH@users.noreply.github.com"
-          
-          # Check if there are changes
-          if [[ -n $(git status -s) ]]; then
-            git add manifest.json
-            git commit -m "Auto-Update Seasonals to v${{ env.VERSION }}"
-            git push
-          else
-            echo "No changes to central manifest."
-          fi
+          generate_release_notes: false
